WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66445
Fix logic error causing reverse of desired WebGL rate limiting behavior
https://bugs.webkit.org/show_bug.cgi?id=66445
Summary
Fix logic error causing reverse of desired WebGL rate limiting behavior
John Bates
Reported
2011-08-17 18:56:12 PDT
Fix logic error causing reverse of desired WebGL rate limiting behavior
Attachments
Patch
(1.69 KB, patch)
2011-08-17 18:56 PDT
,
John Bates
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
John Bates
Comment 1
2011-08-17 18:56:49 PDT
Created
attachment 104294
[details]
Patch
John Bates
Comment 2
2011-08-17 18:58:08 PDT
Quick fix...
Kenneth Russell
Comment 3
2011-08-18 11:32:54 PDT
Comment on
attachment 104294
[details]
Patch Looks good.
WebKit Review Bot
Comment 4
2011-08-18 12:32:26 PDT
Comment on
attachment 104294
[details]
Patch Clearing flags on attachment: 104294 Committed
r93335
: <
http://trac.webkit.org/changeset/93335
>
WebKit Review Bot
Comment 5
2011-08-18 12:32:30 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 6
2011-08-18 12:33:00 PDT
Is there a way to make a regression test for this?
Kenneth Russell
Comment 7
2011-08-18 14:35:33 PDT
(In reply to
comment #6
)
> Is there a way to make a regression test for this?
We gave this some thought; this fix would probably be testable with more hooks in the LayoutTestController. (Run an animation, do some WebGL work, and ensure that it isn't being rate-limited.) John, would you consider filing another bug to add a regression test in this area?
John Bates
Comment 8
2011-08-22 18:09:34 PDT
Filed:
https://bugs.webkit.org/show_bug.cgi?id=66742
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug