Fix logic error causing reverse of desired WebGL rate limiting behavior https://bugs.webkit.org/show_bug.cgi?id=66445

Patch by John Bates <jbates@google.com> on 2011-08-18
Reviewed by Kenneth Russell.

* platform/graphics/chromium/WebGLLayerChromium.cpp:
(WebCore::WebGLLayerChromium::setTextureUpdated):

Canonical link: https://commits.webkit.org/82331@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93335 268f45cc-cd09-0410-ab3c-d52691b4dbfc